Remove width from CSS 'page' elements... this may fix some horizontal scrolling issues in some mobile browses

--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -151,7 +151,6 @@ div.give-block {
 .page {
 	overflow: hidden;
 	max-height: 0;
- 	width: 100%;
 	color: #ff9216;
   	background-color: #ffffff;
   	opacity: 0;
